syntax = "proto3";

package ec_prv;

service UrlShortener {
  rpc ShortenUrl(ShortenUrlRequest) returns (ShortenedUrlResponse) {}
  rpc LookupUrl(UrlLookupRequest) returns (UrlLookupResponse) {}
}

message ShortenUrlRequest {
  string long_url = 1;
}

message ShortenedUrlResponse {
  string short_url = 1;
  string long_url = 2;
}

message UrlLookupRequest {
  string short_url = 1;
}

message UrlLookupResponse {
  string short_url = 1;
  string long_url = 2;
}